# OBJ-Parser

./: .gitignore  LICENSE  README.md  bench.py  objParser.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_objParser.py
